styleguide/assets/variables.css
:root{
    --color-main-text:#222;
    --color-main-background:#fff;
    --color-main-background-translucent:rgba(255, 255, 255, 0.97);
    --color-background-dark:#ededed;
    --color-background-darker:#dbdbdb;
    --color-background-hover: #f5f5f5;
    --color-primary:#0082c9;
    --color-primary-light: #e6f3f9;
    --color-primary-text:#fff;
    --color-primary-text-dark:#ededed;
    --color-primary-element:#0082c9;
    --color-primary-element-light:#17adff;
    --color-primary-light:#e6f3fa;
    --color-error:#e9322d;
    --color-warning:#eca700;
    --color-success:#46ba61;
    --color-text-maxcontrast:#767676;
    --color-text-light:#222;
    --color-text-lighter:#767676;
    --color-loading-light:#ccc;
    --color-loading-dark:#444;
    --color-box-shadow:rgba(77, 77, 77, 0.5);
    --color-border:#ededed;
    --color-border-dark:#dbdbdb;
    --breakpoint-mobile:1024px;
    --border-radius:3px;
    --border-radius-large:10px;
    --border-radius-pill:100px;
    --font-face:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
    --animation-quick:100ms;
    --animation-slow:300ms
}

